Fixing site overflow issue in large tablet size

--- a/src/common/utils.less
+++ b/src/common/utils.less
@@ -29,9 +29,6 @@
 .ignore-parent-padding () {
   margin: 0 calc(-1 * @tweak-site-side-padding);
 
-  @media screen and (max-width: 1024px) {
-    margin: 0 calc(-1 * @paddingXL);
-  }
   @media screen and (max-width: 960px) {
     margin: 0 calc(-1 * @paddingL);
   }
